<resources>
    <string name="app_name">MyBooksList</string>

    <string name="add_book">add book</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_book">AddBookActivity</string>

    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="status">Status</string>
    <string name="notes">Notes</string>
    <string name="date_added">Date Added</string>


    <string-array name="book_status">
        <item>Want to read</item>
        <item>Reading</item>
        <item>Finished</item>
        <item>Dropped</item>
    </string-array>
    <string name="title_activity_modify_game">ModifyGameActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_modify_book">ModifyBookActivity</string>
    <string name="title_is_required">Title is required!</string>
    <string name="title_field_is_empty">Title field is empty!</string>
    <string name="author_is_required">Author is required!</string>
    <string name="author_field_is_empty">Author field is empty!</string>
    <string name="book_has_been_modified">Book has been modified</string>
    <string name="title_activity_book_details">BookDetailsActivity</string>
    <string name="default_value">Default value</string>
    <string name="save_book">Save Book</string>
    <string name="book_has_been_added">Book has been added</string>
    <string name="modify_book">Modify book</string>
    <string name="delete_book">Delete book</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_book_deletion_confirmation">Are you sure you want to delete this book?</string>
    <string name="book_deleted">Book deleted</string>

</resources>
