<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".GameDetailsActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title"
            android:id="@+id/details_label_title"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/author"
            android:id="@+id/details_label_author"
            android:layout_marginTop="41dp"
            android:layout_below="@+id/details_label_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/status"
            android:id="@+id/details_label_status"
            android:layout_below="@+id/details_label_author"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="41dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/date_added"
            android:id="@+id/details_label_date"
            android:layout_below="@+id/details_label_status"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="41dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/notes"
            android:id="@+id/details_label_notes"
            android:layout_below="@+id/details_label_date"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="41dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/details_value_title"
            android:layout_alignTop="@+id/details_label_title"
            android:layout_toRightOf="@+id/details_label_date"
            android:layout_toEndOf="@+id/details_label_date"
            android:layout_marginLeft="10dp"
            android:text="@string/default_value" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/default_value"
            android:id="@+id/details_value_author"
            android:layout_above="@+id/details_label_status"
            android:layout_toRightOf="@+id/details_label_date"
            android:layout_toEndOf="@+id/details_label_date"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/default_value"
            android:id="@+id/details_value_status"
            android:layout_above="@+id/details_label_date"
            android:layout_alignLeft="@+id/details_value_title"
            android:layout_alignStart="@+id/details_value_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/default_value"
            android:id="@+id/details_value_date"
            android:layout_above="@+id/details_label_notes"
            android:layout_alignLeft="@+id/details_value_status"
            android:layout_alignStart="@+id/details_value_status" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/default_value"
            android:id="@+id/details_value_notes"
            android:layout_below="@+id/details_label_notes"
            android:layout_alignLeft="@+id/details_label_notes"
            android:layout_alignStart="@+id/details_label_notes"
            android:layout_marginTop="10dp" />
    </RelativeLayout>
</ScrollView>
